cabal-version:     3.8
-- Further docs  http://haskell.org/cabal/users-guide/
name:               agda2scala
-- See the Haskell package versioning policy (PVP) for standards
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.2
description:        Allows to export Scala source files from formal specification in Agda
license:            MIT
license-file:       LICENSE
author:             lemastero
maintainer:         piotr.paradzinski@gmail.com
category:           Language, Compiler
build-type:         Simple
synopsis:           Compiling Agda code to Scala.

extra-doc-files:    README.md, CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/lemastero/agda2scala.git

common warnings
  ghc-options: -Wall

library
  hs-source-dirs:      src
  exposed-modules:     Agda.Compiler.Scala.Backend
                       Agda.Compiler.Scala.Expr
                       Paths_agda2scala
  autogen-modules:     Paths_agda2scala
  build-depends:       base >= 4.10 && < 4.20,
                       containers > 0.6 && < 0.7,
                       Agda >= 2.6.4 && < 2.6.5,
                       deepseq >= 1.4.4 && < 1.6,
                       text >= 1.2.3.1
  default-language:    Haskell2010
  import:              warnings

executable agda2scala
  hs-source-dirs:   app
  main-is:          Main.hs
  other-modules:    Paths_agda2scala
  autogen-modules:  Paths_agda2scala
  build-depends:    base >= 4.10 && < 4.20,
                    Agda >= 2.6.4 && < 2.6.5,
                    agda2scala
  default-language: Haskell2010
  import:           warnings

test-suite agda2scala-test
  import:           warnings
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          ScalaBackendTest.hs
  build-depends:    base >=4.10 && < 4.20,
                    Agda >= 2.6.4 && < 2.6.5,
                    HUnit >= 1.6.2.0,
                    agda2scala
